--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
             </form>
         </Div>
     </div>
-    <footer>Created With Love By Osama Elzero&#10084;&#65039;</footer>
+    <footer></footer>
     <!-- End Contact Us -->
         <script src="./Js/Master.js"></script>
 </body>
